--- a/js_challenge02/js_challenge02.html
+++ b/js_challenge02/js_challenge02.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1>Hello!</h1>
-    <script src="src/j_schallenge02.js"></script>
+    <script src="src/js_challenge02.js"></script>
   </body>
 </html>
