--- a/js_challenge03/js_challenge03.html
+++ b/js_challenge03/js_challenge03.html
@@ -20,6 +20,6 @@
     <div id="js-result">
         <span></span>
     </div>
-    <script src="src/js_challenge03.js"></script>
+    <script src="js_challenge03.js"></script>
 </body>
 </html>
